# networking-powervm

./: .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  bindep.txt  lower-constraints.txt  openstack-common.conf  requirements.txt  setup.cfg  sonar-project.properties  test-requirements.txt  tox.ini
devstack/: README.rst  plugin.sh  settings
doc/: requirements.txt
doc/source/: conf.py  index.rst
doc/source/devref/: development_environment.rst  index.rst  testing.rst  usage.rst
doc/source/policies/: bugs.rst  code-reviews.rst  index.rst
networking_powervm/: __init__.py  _i18n.py
networking_powervm/hacking/: checks.py
networking_powervm/locale/: networking-powervm-log-critical.pot  networking-powervm-log-error.pot  networking-powervm-log-info.pot  networking-powervm-log-warning.pot  networking-powervm.pot
networking_powervm/locale/de/: networking-powervm-log-error.po  networking-powervm-log-info.po  networking-powervm-log-warning.po  networking-powervm.po
networking_powervm/locale/es/: networking-powervm-log-error.po  networking-powervm-log-info.po  networking-powervm-log-warning.po  networking-powervm.po
networking_powervm/locale/fr/: networking-powervm-log-critical.po  networking-powervm-log-error.po  networking-powervm-log-info.po  networking-powervm-log-warning.po  networking-powervm.po
networking_powervm/locale/it/: networking-powervm-log-error.po  networking-powervm-log-info.po  networking-powervm-log-warning.po  networking-powervm.po
networking_powervm/locale/ja/: networking-powervm-log-error.po  networking-powervm-log-info.po  networking-powervm-log-warning.po  networking-powervm.po
networking_powervm/locale/ko/: networking-powervm-log-error.po  networking-powervm-log-info.po  networking-powervm-log-warning.po  networking-powervm.po
networking_powervm/locale/pt-BR/: networking-powervm-log-error.po  networking-powervm-log-info.po  networking-powervm-log-warning.po  networking-powervm.po
networking_powervm/locale/ru/: networking-powervm-log-error.po  networking-powervm-log-info.po  networking-powervm-log-warning.po  networking-powervm.po
networking_powervm/locale/zh-Hans/: networking-powervm-log-critical.po  networking-powervm-log-error.po  networking-powervm-log-info.po  networking-powervm-log-warning.po  networking-powervm.po
networking_powervm/locale/zh-Hant/: networking-powervm-log-error.po  networking-powervm-log-info.po  networking-powervm-log-warning.po  networking-powervm.po
networking_powervm/plugins/ibm/agent/powervm/: agent_base.py  constants.py  exceptions.py  fake_sea_agent.py  i18n.py  powervm_sea_agent.rst  prov_req.py  sea_agent.py  sriov_agent.py  utils.py
networking_powervm/plugins/ml2/drivers/: mech_pvm_base.py  mech_pvm_sea.py  mech_pvm_sriov.py
networking_powervm/tests/unit/plugins/ibm/powervm/: base.py  test_agent_base.py  test_prov_req.py  test_sea_agent.py  test_sriov_agent.py  test_utils.py
networking_powervm/tests/unit/plugins/ibm/powervm/data/: fake_cna.txt
networking_powervm/tests/unit/plugins/ml2/drivers/: test_mech_pvm.py  test_mech_pvm_sea.py
neutron-powervm/plugins/ibm/agent/powervm/: powervm_sea_agent.py
neutron_powervm/: __init__.py
neutron_powervm/plugins/ibm/agent/powervm/: agent_base.py  constants.py  exceptions.py  fake_powervm_sea_agent.py  fake_sea_agent.py  powervm_sea_agent.py  powervm_sea_agent.rst  sea_agent.py  utils.py
neutron_powervm/plugins/ml2/drivers/: mech_pvm_sea.py
neutron_powervm/tests/unit/ibm/powervm/: test_powervm_sea_agent.py  test_utils.py
neutron_powervm/tests/unit/ibm/powervm/data/: fake_lpar_feed.txt
neutron_powervm/tests/unit/plugins/ibm/powervm/: base.py  fixtures.py  test_agent_base.py  test_powervm_sea_agent.py  test_sea_agent.py  test_utils.py
neutron_powervm/tests/unit/plugins/ml2/drivers/: test_mech_pvm_sea.py
specs/: template.rst
specs/newton/: powervm-sriov-neutron.rst
