[metadata]
name = neutron-powervm
summary = PowerVM Neutron ML2 Agent for OpenStack Neutron.
description-file = README.rst
author = IBM
author-email = thorst@us.ibm.com
home-page = ???
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[entry_points]
console_scripts =
    neutron-powervm-sea-agent = neutron_powervm.plugins.ibm.agent.powervm.sea_agent:main
neutron.ml2.mechanism_drivers =
    pvm_sea = neutron_powervm.plugins.ml2.drivers.mech_pvm_sea:PvmSEAMechanismDriver

[files]
packages = neutron_powervm

[build_sphinx]
all_files = 1
source-dir = doc/source
build-dir = doc/build

[compile_catalog]
directory = neutron_powervm/locale
domain = neutron-powervm

[update_catalog]
domain = neutron-powervm
output_dir = neutron_powervm/locale
input_file = neutron_powervm/locale/neutron-powervm.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = neutron_powervm/locale/neutron-powervm.pot
