[metadata]
name = networking-powervm
summary = PowerVM Neutron ML2 Agent for OpenStack Neutron.
description-file = README.rst
author = IBM
author-email = thorst@us.ibm.com
home-page = https://launchpad.net/neutron-powervm
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[entry_points]
console_scripts =
    networking-powervm-sea-agent = networking_powervm.plugins.ibm.agent.powervm.sea_agent:main
    networking-powervm-sriov-agent = networking_powervm.plugins.ibm.agent.powervm.sriov_agent:main
neutron.ml2.mechanism_drivers =
    pvm_sea = networking_powervm.plugins.ml2.drivers.mech_pvm_sea:PvmSEAMechanismDriver
    pvm_sriov = networking_powervm.plugins.ml2.drivers.mech_pvm_sriov:PvmSRIOVMechanismDriver

[files]
packages = networking_powervm

[build_sphinx]
all_files = 1
source-dir = doc/source
build-dir = doc/build

[compile_catalog]
directory = networking_powervm/locale
domain = networking-powervm

[update_catalog]
domain = networking-powervm
output_dir = networking_powervm/locale
input_file = networking_powervm/locale/networking-powervm.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_powervm/locale/networking-powervm.pot
